deploy/main.tf

# Configure the AWS provider
provider "aws" {
  region = "eu-west-1"

  default_tags {
    tags = {
      devconnector = "dev"

    }
  }
}

locals {
  secrets = yamldecode(file("${path.module}/secrets.yaml"))
}


resource "aws_vpc" "main" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "main"
  }
}

resource "aws_subnet" "main" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = true

  tags = {
    Name = "public-subnet"
  }
}



resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "main-igw"
  }
}

resource "aws_route_table" "main" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }

  tags = {
    Name = "main-rt"
  }
}

resource "aws_route_table_association" "main" {
  subnet_id      = aws_subnet.main.id
  route_table_id = aws_route_table.main.id
}


# To get flow logs:

#resource "aws_s3_bucket" "main" {
#  bucket        = "cks2si-devconnector-bucket"
#  force_destroy = true
#
#}
#
#resource "aws_flow_log" "mainlogs" {
#  log_destination      = aws_s3_bucket.main.arn
#  log_destination_type = "s3"
#  traffic_type         = "ALL"
#  vpc_id               = aws_vpc.main.id
#}
